// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeViewMenu should highlight the active node 1`] = `
<KeyDown
  down={[Function]}
  enter={[Function]}
  left={[Function]}
  right={[Function]}
  up={[Function]}
>
  <input
    aria-label="Type and search"
    onChange={[Function]}
    placeholder="Type and search"
    style={
      Object {
        "border": "none",
        "padding": "1rem 1.5rem",
        "width": "100%",
      }
    }
    type="search"
  />
  <ul
    style={
      Object {
        "borderTop": "1px solid #ccc",
        "listStyleType": "none",
        "paddingLeft": 0,
      }
    }
  >
    <li
      aria-pressed={false}
      key="releasenotes"
      onClick={[Function]}
      role="button"
      style={
        Object {
          "background": "none",
          "borderBottom": "1px solid #ccc",
          "boxShadow": "none",
          "color": "#333",
          "cursor": "pointer",
          "padding": " .75rem  1rem  .75rem 0.75rem",
          "position": "relative",
          "zIndex": "unset",
        }
      }
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <ToggleIcon
          on={true}
        />
      </div>
      Release Notes
    </li>
    <li
      aria-pressed={false}
      key="releasenotes/desktop-modeler"
      onClick={[Function]}
      role="button"
      style={
        Object {
          "background": "none",
          "borderBottom": "1px solid #ccc",
          "boxShadow": "none",
          "color": "#333",
          "cursor": "pointer",
          "padding": " .75rem  1rem  .75rem 2.5rem",
          "position": "relative",
          "zIndex": "unset",
        }
      }
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <ToggleIcon
          on={true}
        />
      </div>
      Desktop Modeler
    </li>
    <li
      aria-pressed={true}
      key="releasenotes/desktop-modeler/7"
      onClick={[Function]}
      role="button"
      style={
        Object {
          "background": "#179ed3",
          "borderBottom": "none",
          "boxShadow": "none",
          "color": "white",
          "cursor": "pointer",
          "padding": " .75rem  1rem  .75rem 4.25rem",
          "position": "relative",
          "zIndex": "unset",
        }
      }
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <ToggleIcon
          on={false}
        />
      </div>
      7
    </li>
    <li
      aria-pressed={false}
      key="atd"
      onClick={[Function]}
      role="button"
      style={
        Object {
          "background": "none",
          "borderBottom": "1px solid #ccc",
          "boxShadow": "none",
          "color": "#333",
          "cursor": "pointer",
          "padding": " .75rem  1rem  .75rem 2.75rem",
          "position": "relative",
          "zIndex": "unset",
        }
      }
    >
      ATS Guide
    </li>
  </ul>
</KeyDown>
`;

exports[`TreeViewMenu should open specified nodes 1`] = `
<KeyDown
  down={[Function]}
  enter={[Function]}
  left={[Function]}
  right={[Function]}
  up={[Function]}
>
  <input
    aria-label="Type and search"
    onChange={[Function]}
    placeholder="Type and search"
    style={
      Object {
        "border": "none",
        "padding": "1rem 1.5rem",
        "width": "100%",
      }
    }
    type="search"
  />
  <ul
    style={
      Object {
        "borderTop": "1px solid #ccc",
        "listStyleType": "none",
        "paddingLeft": 0,
      }
    }
  >
    <li
      aria-pressed={false}
      key="releasenotes"
      onClick={[Function]}
      role="button"
      style={
        Object {
          "background": "none",
          "borderBottom": "1px solid #ccc",
          "boxShadow": "none",
          "color": "#333",
          "cursor": "pointer",
          "padding": " .75rem  1rem  .75rem 0.75rem",
          "position": "relative",
          "zIndex": "unset",
        }
      }
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <ToggleIcon
          on={true}
        />
      </div>
      Release Notes
    </li>
    <li
      aria-pressed={false}
      key="releasenotes/desktop-modeler"
      onClick={[Function]}
      role="button"
      style={
        Object {
          "background": "none",
          "borderBottom": "1px solid #ccc",
          "boxShadow": "none",
          "color": "#333",
          "cursor": "pointer",
          "padding": " .75rem  1rem  .75rem 2.5rem",
          "position": "relative",
          "zIndex": "unset",
        }
      }
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <ToggleIcon
          on={true}
        />
      </div>
      Desktop Modeler
    </li>
    <li
      aria-pressed={false}
      key="releasenotes/desktop-modeler/7"
      onClick={[Function]}
      role="button"
      style={
        Object {
          "background": "none",
          "borderBottom": "1px solid #ccc",
          "boxShadow": "none",
          "color": "#333",
          "cursor": "pointer",
          "padding": " .75rem  1rem  .75rem 4.25rem",
          "position": "relative",
          "zIndex": "unset",
        }
      }
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <ToggleIcon
          on={false}
        />
      </div>
      7
    </li>
    <li
      aria-pressed={false}
      key="atd"
      onClick={[Function]}
      role="button"
      style={
        Object {
          "background": "none",
          "borderBottom": "1px solid #ccc",
          "boxShadow": "none",
          "color": "#333",
          "cursor": "pointer",
          "padding": " .75rem  1rem  .75rem 2.75rem",
          "position": "relative",
          "zIndex": "unset",
        }
      }
    >
      ATS Guide
    </li>
  </ul>
</KeyDown>
`;

exports[`TreeViewMenu should render the level-1 nodes by default 1`] = `
<KeyDown
  down={[Function]}
  enter={[Function]}
  left={[Function]}
  right={[Function]}
  up={[Function]}
>
  <input
    aria-label="Type and search"
    onChange={[Function]}
    placeholder="Type and search"
    style={
      Object {
        "border": "none",
        "padding": "1rem 1.5rem",
        "width": "100%",
      }
    }
    type="search"
  />
  <ul
    style={
      Object {
        "borderTop": "1px solid #ccc",
        "listStyleType": "none",
        "paddingLeft": 0,
      }
    }
  >
    <li
      aria-pressed={false}
      key="releasenotes"
      onClick={[Function]}
      role="button"
      style={
        Object {
          "background": "none",
          "borderBottom": "1px solid #ccc",
          "boxShadow": "none",
          "color": "#333",
          "cursor": "pointer",
          "padding": " .75rem  1rem  .75rem 0.75rem",
          "position": "relative",
          "zIndex": "unset",
        }
      }
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <ToggleIcon
          on={false}
        />
      </div>
      Release Notes
    </li>
    <li
      aria-pressed={false}
      key="atd"
      onClick={[Function]}
      role="button"
      style={
        Object {
          "background": "none",
          "borderBottom": "1px solid #ccc",
          "boxShadow": "none",
          "color": "#333",
          "cursor": "pointer",
          "padding": " .75rem  1rem  .75rem 2.75rem",
          "position": "relative",
          "zIndex": "unset",
        }
      }
    >
      ATS Guide
    </li>
  </ul>
</KeyDown>
`;
